--- a/Task 4/style.css
+++ b/Task 4/style.css
@@ -5,6 +5,7 @@
   box-sizing: border-box;
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
     'Lucida Sans', Arial, sans-serif;
+  background-color: #333;
 }
 
 /* Mobile first */
@@ -25,5 +26,36 @@
 
 .container h1 {
   margin-top: 50px;
-  color: #333;
+  color: rgb(249, 246, 246);
+}
+
+#output{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  gap: 60px;
+  margin-top: 30px;
+  margin-left: 30px;
+}
+
+.Gamintojas-card{
+  width: 250px;
+  height: fit-content;
+  
+}
+
+.Gamintojas-card h2{
+  margin-top: 50px;
+  color: rgb(249, 246, 246);
+}
+
+.Gamintojas-card ul{
+  margin-top: 20px;
+}
+
+.Gamintojas-card li{
+  list-style-type: none;
+  font-size: 15px;
+  color: rgb(161, 161, 161);
 }
